fixing card spacing

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -68,7 +68,6 @@ body {
 #vocab-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   padding: 0.5rem;
 }
 
